--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Future home of Design System Prototype</p>
+  <p>Future Home of Design System Prototype</p>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
