--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
+  <title>RAC design system</title>
+  <meta name="description" content="RAC Design Systems">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta property="og:title" content="">
@@ -16,16 +16,58 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
+  <style type="text/css">
+    @import url('https://fonts.googleapis.com/css2?family=Enriqueta:wght@400;500;600;700&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');
+
+</style> 
+
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+  <link href="css/style.css" rel="stylesheet" type="text/css">
 
-  <meta name="theme-color" content="#fafafa">
+
 </head>
 
 <body>
-
   <!-- Add your site or application content here -->
-  <p>Future Home of Design System Prototype</p>
+  <main>
+    <div class="ds-container">
+      <div class="left-sidebar"><h3>Riverside Art Center Design System</h3>
+        <p>Version 1.0</p>
+        <p>Updated April 20, 2021</p>
+        </div>
+      <div class="main-content">
+        
+        <section class="section">
+          <p class="section-label">Typography</p>
+          <h1 class="header">H1 headline</h1>
+          <h2 class="header">H2 headline</h2>
+          <h3 class="header">H3 headline</h3>
+          <h4 class="header">H4 headline</h4>
+          <h5 class="header">H5 headline</h5>
+          <h6 class="header">H6 headline</h6>
+
+          <p>This is what body copy looks like. Strategic design means designing for a specific objective. More often than not, that objective is growing a business. But it’s important to recognize that there’s a difference between being strategic by being the conduit between the business and the user, and designing for the business alone.</p>
+        </section>
+
+          <section class="section">
+          <p class="section-label">Colors</p>
+          <div class="primary-hue color-brand-pink"><div>RAC brand pink</div><div>#DD3782<br></div></div>
+          <div class="primary-hue color-brand-black"><div>RAC brand black</div><div>#000000<br></div></div>
+          <div class="secondary-hue color-brand-seagreen"><div>RAC brand seagreen</div><div>#77E8CA<br></div></div>
+          <div class="secondary-hue color-brand-green"><div>RAC brand green</div><div>#70AF18<br></div></div>
+          <div class="secondary-hue color-brand-yellow"><div>RAC brand yellow</div><div>#FFCB05<br></div></div>
+          <div class="accent-hue color-brand-red"><div>RAC brand red</div><div>#ED1C24<br></div></div>
+          <div class="secondary-hue color-gray900"><div>RAC gray 900</div><div>#141414<br></div></div>
+          <div class="secondary-hue color-gray800"><div>RAC gray 800</div><div>#333333<br></div></div>
+          <div class="secondary-hue color-gray200 text-dark"><div>RAC gray 200</div><div>#929292<br></div></div>
+          <div class="secondary-hue color-gray100 text-dark"><div>RAC gray 100</div><div>#CFCFCF<br></div></div>
+
+
+        </section>
+      </div>
+    </div>
+    </main>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
