--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <input type="text" class="text1" placeholder="Enter text here"/>
             <label class="label1"><i class="fas fa-circle" style="color: #DD3782;"></i>&nbsp; ASSISTIVE TEXT</label>
           </form>
-          <p class="body-text" style="color:#333333;">Resizable (Try resizing)</p>
+          <p class="body-text" style="color:#333333;">Resizable (Try resizing by clicking the corner triangle)</p>
           <form>
             <label class="label1">LABEL</label>
             <textarea class="text1" rows="4" cols="50" placeholder="Enter text here"></textarea>
